Fix conflickting main calls in __init__ files by moving files to src/projectname

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,6 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-[tool.setuptools.package-dir]
-cmdpackage = "src"
-
+where = ["src"]
 [project.scripts]
-cmdpackage = "src:main"
+cmdpackage = "cmdpackage.main:main"
